# terra-interoperability-model

./: .gitignore  README.md  notes
DUO/: DUO_BFOdependencies.rdf  DUO_IAOdependencies.rdf
PublishingSource/: TerraInteroperabilityModel.html
clpage/: Dockerfile  httpd-container.conf
docs/: index.html  index.md
documents/: Ontologies.md
models/: DSPCoreDataModel.ttl  DSPdcatap.ttl  Encode Data Model.cmap  Encode.ttl  OBI_MaterialEntity_PlannedProcess_InfoContentEntity.xml.rdf  README.md  epiLIMS.ttl
schemas/: encode-study.json  v2f-study.json
scripts/: create_dataset.py  unit_test_create_dataset.py
test/: requirements.txt  unit_test_create_dataset.py
tools/data-model-exporter/: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini
tools/data-model-exporter/data_model_exporter/: __init__.py  common.py  dmExporter.py  property.py  property_types.py  rdf_graph_manager.py  schema.py  ttl_schema_generator.py  typing.py
tools/data-model-exporter/data_model_exporter/tests/: test_nothing.py  test_property.py  test_rdf_graph_manager.py  test_schema.py  test_ttl_schema_generator.py
tools/data-model-exporter/data_model_exporter/tests/fixtures/: test.ttl
tools/data-model-exporter/dmExporter/: Dockerfile  README.md  mypy.ini  requirements.txt
tools/data-model-exporter/dmExporter/data_model_exporter/data_model_exporter/: common.py  property.py  property_types.py  rdf_graph_manager.py  schema.py  ttl_schema_generator.py  typingDM.py
tools/data-model-exporter/tests/: DataCollection.json  DataCollection.ttl  test_data_model_exporter.py
(+225 files in other folders)
