[tool.poetry]
name = "data-model-exporter"
version = "0.1.0"
description = ""
authors = ["Quazi Hoque <qhoque@broadinstitute.org>"]

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
export = 'data_model_exporter.dmExporter:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
